[Tracker - 1] - Remove all code warnings(Provoked by the transition to JDK 11)